--- a/TournamentWebsite/TournamentWebsite.csproj
+++ b/TournamentWebsite/TournamentWebsite.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="OrchardCore.Application.Cms.Targets" Version="1.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrchardCore.Themes\MyTheme.OrchardCore\MyTheme.OrchardCore.csproj" />
+  </ItemGroup>
+
 </Project>
